<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>loom</groupId>
    <artifactId>loom-api</artifactId>
    <version>0.1.0</version>

    <repositories>
        <repository>
            <id>velocity</id>
            <url>https://nexus.velocitypowered.com/repository/maven-public/</url>
        </repository>
        <repository>
            <id>fabric</id>
            <url>https://maven.fabricmc.net</url>
        </repository>
        <repository>
            <id>lib</id>
            <url>file:///${pom.basedir}/libs</url>
        </repository>
    </repositories>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.12.0</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <release>21</release>
                    <proc>none</proc>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>net.fabricmc</groupId>
            <artifactId>fabric-loader</artifactId>
            <version>0.14.3</version>
        </dependency>
        <dependency>
            <groupId>net.fabricmc</groupId>
            <artifactId>sponge-mixin</artifactId>
            <version>0.12.5+mixin.0.8.5</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.8.9</version>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>33.0.0-jre</version>
        </dependency>
        <dependency>
            <groupId>equilinox</groupId>
            <artifactId>equilinox</artifactId>
            <version>1.0</version>
        </dependency>
    </dependencies>
</project>